Add meta tags for search engines

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta tags for search engines -->
+    <meta name="description" content="Indian Weddings for Beginners. A quiz game to test and enhance your knowledge about Indian Weddings">
+    <meta name="keywords" content="Indian wedding, wedding, India, quiz">
     <title>Indian Weddings for Beginners</title>
     <!-- Favicon -->
     <!-- code from https://www.w3schools.com/html/html_favicon.asp -->
