--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon/icons8-heart-16.png"> 
 </head>
 <body>
+    <!-- Header -->
+    <header>
+        Header
+    </header>
+
+    <!-- Main Section -->
+    <main>
+        Main
+    </main>
     
+    <!-- Footer -->
+    <footer>
+        Footer
+    </footer>
 </body>
 </html>
