Add css file and connect css file to html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- Favicon -->
     <!-- code from https://www.w3schools.com/html/html_favicon.asp -->
     <link rel="icon" type="image/x-icon" href="assets/favicon/icons8-heart-16.png"> 
+    <!-- Link CSS file -->
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Header -->
@@ -21,7 +23,7 @@
     <main>
         Main
     </main>
-    
+
     <!-- Footer -->
     <footer>
         Footer
