To header add text and padding, and  style font

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <!-- Link CSS file -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <!-- Header -->
     <header>
-        Header
+        Indian Weddings for Beginners
     </header>
 
     <!-- Main Section -->
