Add Fontawesome kit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Header -->
     <header>
-        Indian Weddings for Beginners
+        Indian Weddings for Beginners <i class="fa-solid fa-champagne-glasses"></i><i class="fa-regular fa-gem"></i>
     </header>
 
     <!-- Main Section -->
@@ -29,5 +29,8 @@
     <footer>
         Footer
     </footer>
+
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/73d77f4c3d.js" crossorigin="anonymous"></script>
 </body>
 </html>
