Add copyright and linked logo to footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Header -->
     <header>
-        Indian Weddings for Beginners <i class="fa-solid fa-champagne-glasses"></i><i class="fa-regular fa-gem"></i>
+        Indian Weddings for Beginners
     </header>
 
     <!-- Main Section -->
@@ -27,7 +27,8 @@
 
     <!-- Footer -->
     <footer>
-        Footer
+        <p>© Maria Hochstöger</p>
+        <a href="https://www.linkedin.com/in/maria-hochstoeger-866a5b31/" target="_blank" rel="noopener" aria-label="Visit the developer's Linked-In page (opens in new tab)"><i class="fa-brands fa-linkedin"></i></a>
     </footer>
 
     <!-- Font Awesome kit -->
