Make header text into a h1-heading and adjust font-sizes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!-- Header -->
     <header>
-        Indian Weddings for Beginners
+        <h1>Indian Weddings for Beginners</h1>
     </header>
 
     <!-- Main Section -->
