Push main content below header. Delete game.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@
 
     <!-- Main Section -->
     <main>
-        Main
+        <!-- 
+        <div id="container">
+            <div id="heading">
+                <p>This game tests your knowledge about Indian weddings!</p>
+            </div>
+            <section id="user-section">
+                <div id="user-div">
+
+                </div>
+                <button id="submit-button"></button>
+            </section>
+            <div id="rules"></div>
+        </div>
+        -->
+        <p>Main</p>
     </main>
 
     <!-- Footer -->
