Create html structure for welcome page, add styling for heading and input fields

--- a/index.html
+++ b/index.html
@@ -21,22 +21,20 @@
     </header>
 
     <!-- Main Section -->
-    <main>
-        <!-- 
+    <main> 
         <div id="container">
             <div id="heading">
-                <p>This game tests your knowledge about Indian weddings!</p>
+                <h2>This game tests your knowledge about Indian weddings!</h2>
             </div>
             <section id="user-section">
                 <div id="user-div">
-
+                    <label for="input-name" id="input-name-label">Enter your name:</label>
+                    <input type="text" id="input-name" name="name" placeholder="Type your name" required>
                 </div>
                 <button id="submit-button"></button>
             </section>
             <div id="rules"></div>
         </div>
-        -->
-        <p>Main</p>
     </main>
 
     <!-- Footer -->
