Add and style submit button on homepage

--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
     <main> 
         <div id="container">
             <div id="heading">
-                <h2>This game tests your knowledge about Indian weddings!</h2>
+                <h1>Welcome!</h1>
+                <h2>This game tests your knowledge about Indian weddings</h2>
             </div>
             <section id="user-section">
                 <div id="user-div">
                     <label for="input-name" id="input-name-label">Enter your name:</label>
                     <input type="text" id="input-name" name="name" placeholder="Type your name" required>
                 </div>
-                <button id="submit-button"></button>
+                <button type="button" id="submit-button">Submit</button>
             </section>
             <div id="rules"></div>
         </div>
