--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
                     <label for="input-name" id="input-name-label">Enter your name:</label>
                     <input type="text" id="input-name" name="name" placeholder="Type your name" required>
                 </div>
-                <button type="button" id="submit-button">Submit</button>
+                <button type="button" id="submit-button" class="button">Submit</button>
             </section>
-            <div id="rules"></div>
+            <div id="rules">
+                <button type="button" id="rules-button" class="button">How to play</button>
+            </div>
         </div>
     </main>
 
