Create js-file and connect it to index.html

--- a/index.html
+++ b/index.html
@@ -48,5 +48,7 @@
 
     <!-- Font Awesome kit -->
     <script src="https://kit.fontawesome.com/73d77f4c3d.js" crossorigin="anonymous"></script>
+    <!-- JS file -->
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
