Create empty JS functions

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Indian wedding, wedding, India, quiz">
     <title>Indian Weddings for Beginners</title>
     <!-- Favicon -->
-    <!-- code from https://www.w3schools.com/html/html_favicon.asp -->
+    <!-- Code from https://www.w3schools.com/html/html_favicon.asp -->
     <link rel="icon" type="image/x-icon" href="assets/favicon/icons8-heart-16.png"> 
     <!-- Link CSS file -->
     <link rel="stylesheet" href="assets/css/style.css">
