--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
                 <button type="button" id="rules-button" class="button">How to play</button>
             </div>
         </div>
+        <div id="rules-modal">
+            <div id="modal-content">
+                <span class="close">X</span>
+                <p>Text</p>
+            </div>
+        </div>
     </main>
 
     <!-- Footer -->
