Close modal when clicking X or anywhere outside the modal

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div id="rules-modal">
             <div id="modal-content">
-                <span id="close">X</span>
+                <span id="close-modal">X</span>
                 <h3>How to play</h3>
                 <ul>
                     <li>Upon clicking "Let's start!" the game begins and you will see the first question.</li>
