--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <label for="input-name" id="input-name-label">Enter your name:</label>
                     <input type="text" id="input-name" name="name" placeholder="Type your name" required>
                 </div>
-                <button type="button" id="submit-button" class="button">Let's start!</button>
+                <a href="game.html" class="button">Let's start!</a>
             </section>
             <div id="rules">
                 <button type="button" id="rules-button" class="button">How to play</button>
