Change container id to class

--- a/game.html
+++ b/game.html
@@ -22,9 +22,18 @@
 
     <!-- Main Section -->
     <main> 
-        <div id="container">
-            <div id="heading">
-                <h2>This game tests your knowledge about Indian weddings</h2>
+        <div class="container">
+            <div class="heading" id="question-heading">
+                <h2>Question 1</h2>
+            </div>
+            <div id="question">
+                Placeholder Question
+            </div>
+            <div id="possible-answers">
+                Placeholder Answers
+            </div>
+            <div id="countdown">
+                Placeholder Countdown
             </div>
         </div>
     </main>
