--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Main Section -->
     <main> 
-        <div id="container">
+        <div class="container">
             <div id="heading">
                 <h1>Welcome!</h1>
                 <h2>This game tests your knowledge about Indian weddings</h2>
