Create basic game.html structure and style question-heading, and question divs

--- a/game.html
+++ b/game.html
@@ -23,13 +23,13 @@
     <!-- Main Section -->
     <main> 
         <div class="container">
-            <div class="heading" id="question-heading">
-                <h2>Question 1</h2>
+            <div id="question-heading">
+                <h3>Question 1</h3>
             </div>
             <div id="question">
-                Placeholder Question
+                Placeholder What is the Haldi Ceremony?
             </div>
-            <div id="possible-answers">
+            <div class="possible-answers">
                 Placeholder Answers
             </div>
             <div id="countdown">
