Style answers and countdown

--- a/game.html
+++ b/game.html
@@ -29,9 +29,20 @@
             <div id="question">
                 Placeholder What is the Haldi Ceremony?
             </div>
-            <div class="possible-answers">
-                Placeholder Answers
-            </div>
+            <section>
+                <div class="possible-answers" id="answer-one">
+                    Placeholder Answers The Haldi Ceremony is a ceremony where...
+                </div>
+                <div class="possible-answers" id="answer-two">
+                    Placeholder Answers The Haldi Ceremony is a ceremony where...
+                </div>
+                <div class="possible-answers" id="answer-three">
+                    Placeholder Answers The Haldi Ceremony is a ceremony where...
+                </div>
+                <div class="possible-answers" id="answer-four">
+                    Placeholder Answers The Haldi Ceremony is a ceremony where...
+                </div>
+            </section> 
             <div id="countdown">
                 Placeholder Countdown
             </div>
