Change Let's Play link back to button. Username validation does not yet work

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                     <label for="input-name" id="input-name-label">Enter your name:</label>
                     <input type="text" id="input-name" name="name" placeholder="Type your name" required>
                 </div>
-                <a href="game.html" class="button" id="lets-start">Let's start!</a>
+                <button class="button" id="lets-start">Let's start!</button>
+                <!-- <a href="game.html" class="button" id="lets-start">Let's start!</a> -->
             </section>
             <div id="rules">
                 <button type="button" id="rules-button" class="button">How to play</button>
