Add event listener to start Button. Create function to validate username and move to game page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <section id="user-section">
                 <div id="user-div">
                     <label for="input-name" id="input-name-label">Enter your name:</label>
-                    <input type="text" id="input-name" name="name" placeholder="Type your name" required>
+                    <input type="text" id="input-name" placeholder="Type your name">
                 </div>
                 <button class="button" id="lets-start">Let's start!</button>
                 <!-- <a href="game.html" class="button" id="lets-start">Let's start!</a> -->
