Try to set up a timer. Not yet successful

--- a/game.html
+++ b/game.html
@@ -43,9 +43,7 @@
                     Placeholder Answers The Haldi Ceremony is a ceremony where...
                 </div>
             </section> 
-            <div id="countdown">
-                Placeholder Countdown
-            </div>
+            <div id="countdown"></div>
         </div>
     </main>
 
