Add sample questions as objects to script.js

--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
             <div id="question-heading">
                 <h3>Question 1</h3>
             </div>
-            <div id="question">
+            <div id="question-field">
                 Placeholder What is the Haldi Ceremony?
             </div>
             <section>
