Change quiz structure in game.html to make answers into buttons

--- a/game.html
+++ b/game.html
@@ -23,27 +23,16 @@
     <!-- Main Section -->
     <main> 
         <div class="container">
-            <div id="question-heading">
-                <h3>Question 1</h3>
+            <h2>Quiz</h2>
+            <div class="quiz">
+                <h2 id="question-field">What is the Haldi Ceremony?</h2>
+                <div id="answer-buttons">
+                    <button class="btn">Answer 1</button>
+                    <button class="btn">Answer 2</button>
+                    <button class="btn">Answer 3</button>
+                    <button class="btn">Answer 4</button>
+                </div>
             </div>
-            <div id="question-field">
-                Placeholder What is the Haldi Ceremony?
-            </div>
-            <section>
-                <div class="possible-answers" id="answer-one">
-                    Placeholder Answers The Haldi Ceremony is a ceremony where...
-                </div>
-                <div class="possible-answers" id="answer-two">
-                    Placeholder Answers The Haldi Ceremony is a ceremony where...
-                </div>
-                <div class="possible-answers" id="answer-three">
-                    Placeholder Answers The Haldi Ceremony is a ceremony where...
-                </div>
-                <div class="possible-answers" id="answer-four">
-                    Placeholder Answers The Haldi Ceremony is a ceremony where...
-                </div>
-            </section> 
-            <div id="countdown"></div>
         </div>
     </main>
 
