--- a/game.html
+++ b/game.html
@@ -27,11 +27,12 @@
             <div class="quiz">
                 <h2 id="question-field">What is the Haldi Ceremony?</h2>
                 <div id="answer-buttons">
-                    <button class="btn">Answer 1</button>
+                    <button class="btn">Answer 1 Text text text text text text text text text </button>
                     <button class="btn">Answer 2</button>
                     <button class="btn">Answer 3</button>
                     <button class="btn">Answer 4</button>
                 </div>
+                <button id="next-btn">Next</button>
             </div>
         </div>
     </main>
