Add startQuiz and showQuestion functions. Do not yet work.

--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
         <div class="container">
             <h2>Quiz</h2>
             <div class="quiz">
-                <h2 id="question-field">What is the Haldi Ceremony?</h2>
+                <h2 id="question-field">Placeholder What is the Haldi Ceremony?</h2>
                 <div id="answer-buttons">
                     <button class="btn">Answer 1 Text text text text text text text text text </button>
                     <button class="btn">Answer 2</button>
