Move game part onto index.html to make game.html superfluous

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                 </ul>
             </div>
         </div>
+        <div id="question-field"></div>
+        <div id="answer-buttons"></div>
+        <button id="next-btn"></button>
     </main>
 
     <!-- Footer -->
