--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div id="question-field"></div>
         <div id="answer-buttons"></div>
-        <button id="next-btn"></button>
+        <button id="next-btn" class="button"></button>
     </main>
 
     <!-- Footer -->
