--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div id="question-field"></div>
         <div id="answer-buttons"></div>
         <button id="next-btn" class="button"></button>
+        <button id="home-button" class="button"></button> 
     </main>
 
     <!-- Footer -->
