--- a/index.html
+++ b/index.html
@@ -38,8 +38,14 @@
                 <button type="button" id="rules-button" class="button">How to play</button>
             </div>
         </div>
-        <div id="rules-modal">
-            <div id="modal-content">
+        <div id="error-message" class="modal-outer">
+             <div id="error-content" class="modal-inner">
+                <span id="close-error">X</span>
+                <h3>Please fill in a username!</h3>
+             </div>
+        </div>
+        <div id="rules-modal" class="modal-outer">
+            <div id="modal-content" class="modal-inner">
                 <span id="close-modal">X</span>
                 <h3>How to play</h3>
                 <ul>
