Add h4 element to section based on vlidator feedback

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <h2>This game tests your knowledge about Indian weddings</h2>
             </div>
             <section id="user-section">
+                <h4>User input data</h4>
                 <div id="user-div">
                     <label for="input-name" id="input-name-label">Enter your name:</label>
                     <input type="text" id="input-name" placeholder="Type your name">
