--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 </ul>
             </div>
         </div>
+        <div id="timer"></div>
         <div id="question-field"></div>
         <div id="answer-buttons"></div>
         <button id="next-btn" class="button"></button>
