Finetune the timer. Ensure timer displays when playing multiple rounds

--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                 <span id="close-modal">X</span>
                 <h3>How to play</h3>
                 <ul>
-                    <li>Upon clicking "Let's start!" the game begins and you will see the first question.</li>
+                    <li>Upon clicking "Let's start!" the game begins. A countdown of 30 seconds starts and you will see the first question.</li>
                     <li>Upon choosing your answer, you will receive feedback whether your answer is correct or not.</li>
+                    <li>If you do not choose an answer within 30 seconds, you forfeit the point and the correct answer will be shown.</li>
                     <li>Click "Next" to get to the next question.</li>
                     <li>After all questions have been answered, you will see your score.</li>
                     <li>If you wish to play again, you can do so by clicking "Play again".</li>
